fix: clean up, gulp, js clean, css clean

--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "1.0.0",
   "description": "P5 Udacity- Facehack",
   "dependencies": {
-    "browser-sync": "^2.17.5",
-    "gulp-jslint": "^1.0.5",
     "angular": "^1.5.8",
     "angular-ui-grid": "^3.2.9",
     "angular-ui-router": "^0.3.1",
@@ -16,19 +14,15 @@
   },
   "private": "true",
   "devDependencies": {
+    "browser-sync": "^2.17.5",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-clean": "^0.3.2",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-concat": "^2.6.0",
-    "gulp-concat-css": "^2.3.0",
+    "gulp-cssnano": "^2.1.2",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-jshint": "^2.0.1",
-    "gulp-less": "^1.3.6",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-ngmin": "^0.3.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-if": "^2.0.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
-    "jshint": "^2.9.4"
+    "gulp-useref": "^3.1.2",
+    "require-dir": "^0.3.1"
   }
 }
