--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 node_modules
 bower_components
-dist/app/font-awesome
-dist/app/images
-dist/app/js
-dist/app/styles
-dist/app/views
-dist/app/facehack.ico
+dist
+database.rules.json
+firebase.json
+.firebaserc
