fix: move all dependencies to bower, unless dev one

--- a/package.json
+++ b/package.json
@@ -2,24 +2,18 @@
   "name": "facehack",
   "version": "1.0.0",
   "description": "P5 Udacity- Facehack",
-  "dependencies": {
-    "angular": "^1.5.8",
-    "angular-ui-grid": "^3.2.9",
-    "angular-ui-router": "^0.3.1",
-    "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
-    "jquery.scrollbar": "^0.2.11",
-    "pace-progress": "^1.0.2"
-  },
+  "dependencies": {},
   "private": "true",
   "devDependencies": {
     "browser-sync": "^2.17.5",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-cache": "^0.4.5",
+    "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
