--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
     "gulp-sass": "^2.3.2",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
     "require-dir": "^0.3.1"
