--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-ui-grid": "^3.2.9",
     "jquery.scrollbar": "^0.2.11",
     "angular": "^1.5.8",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "lodash": "^4.17.2"
   }
 }
