--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-sass-lint": "^1.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
-    "require-dir": "^0.3.1"
+    "require-dir": "^0.3.1",
+    "sw-precache": "^4.3.0"
   }
 }
