--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular": "^1.5.8",
     "bootstrap": "^3.3.7",
     "lodash": "^4.17.2",
-    "angular-logger-max": "^1.2.3"
+    "angular-logger-max": "^1.2.3",
+    "idbwrapper": "^1.7.1"
   }
 }
