--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^3.0.0",
@@ -20,6 +21,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
     "require-dir": "^0.3.1",
+    "run-sequence": "^1.2.2",
     "sw-precache": "^4.3.0"
   }
 }
